# MalAdaptive-Autosar

./: CMakeLists.txt  README.md
inc/ara/core/: core_error_domain.cpp  core_error_domain.h  error_code.h  error_domain.h  exception.h  result.h  string_view.h
notes/: compile_commands.txt  linking_against_newer_libstd.txt
scripts/: build.sh
src/: error_code.cpp
src/ara/core/: core_error_domain.h  error_code.h  error_domain.h  future_error_domain.h  intance_specifier.h  optional.h  result.h  string_view.h  test.cpp  utility.h
src/ara/log/: common.cpp  common.h  log_stream.cpp  log_stream.h  logger.cpp  logger.h  logging_framework.cpp  logging_framework.h
src/ara/log/sink/: common.h  console_sink.cpp  console_sink.h  dlt_sink.h  sink.cpp  sink.h
test/: test.cpp
